--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -2492,7 +2492,8 @@ as the art dictates will take similar forms. Isn’t that so, Phaedrus?
 
 \saysocrates Phew! Tisias---or whoever else it was and whatever name he
 pleases to use for
-himself\high{\goto{61}[phaedrus.htmlux5cux23phaedrfn_61]}---seems\high{\goto{62}[phaedrus.htmlux5cux23phaedrfn_62]}
+himself\endnote{Socrates may be referring
+to Corax, whose name is also the Greek word for “crow.”}---seems
 to have discovered an art which he has disguised very well! But now, my
 friend, shall we or shall we not say to him---
 
