--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -70,7 +70,7 @@ Knowledge is only in souls, but, despite the Phaedrus’ own
 critique of writing, reading such a dialogue may be a good way of
 working to attain it.
 
-\hfill J.M.C.\par
+\hfill John M.~Cooper\par
 \stopchapter
 
 \startchapter[title=Phaedrus]
