--- a/projects/mc/rawcontent/rawsymposium.tex
+++ b/projects/mc/rawcontent/rawsymposium.tex
@@ -1,71 +1,70 @@
-\goto{SYMPOSIUM}[contents.htmlux5cux23toc23]
+\startchapter[title=Foreword to Symposium]
 
 Translated by A. Nehamas and P. Woodruff.
 
-{\em This dialogue, Plato's poetic and dramatic masterpiece, relates the
-events of a} {\em ‘symposium' or formal drinking party held in honor of
-the tragedian Agathon's} {\em first victorious production. To gratify
-Phaedrus (the passionate admirer of} {\em speeches and rhetoric in the
-dialogue named after him), who indignantly regrets} {\em the neglect by
-Greek poets and writers of the god of Love, the company} {\em agree to
-give speeches in turn, while they all drink, in praise of Love. ‘Love'}
-{\em (Greek} erôs{\em ) covers sexual attraction and gratification
-between men and} {\em women and between men and teenage boys, but the
-focus here is also and especially} {\em on the adult male's role as
-ethical and intellectual educator of the adolescent} {\em that was
-traditional among the Athenians in the latter sort of relationship,}
-{\em whether accompanied by sex or not. There are six speeches---plus a
-seventh delivered} {\em by an uninvited and very drunk latecomer, the
-Athenian statesman and} {\em general Alcibiades. In his youth Alcibiades
-had been one of Socrates' admiring} {\em followers, and he now reports
-in gripping detail the fascinating reversal Socrates} {\em worked upon
-him in the erotic roles of the older and the younger man} {\em usual
+This dialogue, Plato's poetic and dramatic masterpiece, relates the
+events of a ‘symposium' or formal drinking party held in honor of
+the tragedian Agathon's first victorious production. To gratify
+Phaedrus (the passionate admirer of speeches and rhetoric in the
+dialogue named after him), who indignantly regrets the neglect by
+Greek poets and writers of the god of Love, the company agree to
+give speeches in turn, while they all drink, in praise of Love. ‘Love'
+(Greek} {\em erôs}) covers sexual attraction and gratification
+between men and women and between men and teenage boys, but the
+focus here is also and especially on the adult male's role as
+ethical and intellectual educator of the adolescent that was
+traditional among the Athenians in the latter sort of relationship,
+whether accompanied by sex or not. There are six speeches---plus a
+seventh delivered by an uninvited and very drunk latecomer, the
+Athenian statesman and general Alcibiades. In his youth Alcibiades
+had been one of Socrates' admiring followers, and he now reports
+in gripping detail the fascinating reversal Socrates worked upon
+him in the erotic roles of the older and the younger man usual
 among the Greeks in a relationship of ‘love': Socrates became the
-pursued,} {\em Alcibiades the pursuer. Appropriately enough, all the
-speakers, with the} {\em interesting exception of the comic poet
-Aristophanes, are mentioned in} Protagoras {\em as among those who
-flocked to Callias' house to attend the sophists gathered} {\em there
-(all experts on speaking): as he enters Callias' house, Socrates spots}
-{\em four of the} Symposium {\em speakers---Phaedrus and Eryximachus in
-a crowd} {\em round Hippias, and Agathon and Pausanias (his lover)
-hanging on the words} {\em of Prodicus; Alcibiades joins the company
-shortly afterwards.}
+pursued, Alcibiades the pursuer. Appropriately enough, all the
+speakers, with the interesting exception of the comic poet
+Aristophanes, are mentioned in {\em Protagoras} as among those who
+flocked to Callias' house to attend the sophists gathered there
+(all experts on speaking): as he enters Callias' house, Socrates spots 
+four of the {\em Symposium} speakers---Phaedrus and Eryximachus in
+a crowd round Hippias, and Agathon and Pausanias (his lover)
+hanging on the words of Prodicus; Alcibiades joins the company
+shortly afterwards.
 
-{\em Socrates' own speech is given over to reporting a discourse on love
-he says} {\em he once heard from Diotima, a wise woman from Mantinea.
-This Diotima} {\em seems an invention, contrived by Socrates (and Plato)
-to distance Socrates in} {\em his report of it from what she says. In
-any event, Diotima herself is made to} {\em say that Socrates can
-probably not follow her in the ‘final and highest mystery'} {\em of the
+Socrates' own speech is given over to reporting a discourse on love
+he says he once heard from Diotima, a wise woman from Mantinea.
+This Diotima seems an invention, contrived by Socrates (and Plato)
+to distance Socrates in his report of it from what she says. In
+any event, Diotima herself is made to say that Socrates can
+probably not follow her in the ‘final and highest mystery' of the
 ‘rites of love'---her account of the ascent in love, beginning with love
-for} {\em individual young men, ending with love for the Form of Beauty,
-which ‘always} is {\em and neither comes to be nor passes away, neither
-waxes nor wanes', and is} {\em ‘not beautiful this way and ugly that
-way, nor beautiful at one time and ugly} {\em at another, nor beautiful
-in relation to one thing and ugly in relation to another'} {\em but is
-‘just what it is to be beautiful'. In this way Plato lets us know}
-{\em that this theory of the Beautiful is his own contrivance, not
-really an idea of} {\em Socrates (whether the historical philosopher or
-the philosopher of the ‘Socratic'} {\em dialogues). Readers will want to
-compare Diotima's speech on Love with those} {\em of Socrates in}
-Phaedrus, {\em and also with Socrates' discussion on friendship with}
-{\em the boys in the} Lysis{\em .}
+for individual young men, ending with love for the Form of Beauty,
+which ‘always {\em is} and neither comes to be nor passes away, neither
+waxes nor wanes', and is ‘not beautiful this way and ugly that
+way, nor beautiful at one time and ugly at another, nor beautiful
+in relation to one thing and ugly in relation to another' but is
+‘just what it is to be beautiful'. In this way Plato lets us know
+that this theory of the Beautiful is his own contrivance, not
+really an idea of Socrates (whether the historical philosopher or
+the philosopher of the ‘Socratic' dialogues). Readers will want to
+compare Diotima's speech on Love with those of Socrates in
+{\em Phaedrus}, and also with Socrates' discussion on friendship with 
+the boys in the {\em Lysis}.
 
-{\em The events of this evening at Agathon's house are all reported long
-afterward} {\em by a young friend of Socrates' in his last years,
-Apollodorus. Apparently} {\em they had become famous among Socrates'
-intimates and others who were interested} {\em in hearing about him.
-That, at any rate, is the impression Apollodorus} {\em leaves us with:
+The events of this evening at Agathon's house are all reported long
+afterward by a young friend of Socrates' in his last years,
+Apollodorus. Apparently they had become famous among Socrates'
+intimates and others who were interested in hearing about him.
+That, at any rate, is the impression Apollodorus leaves us with:
 he has himself taken the trouble to learn about it all from
-Aristodemus,} {\em who was present on the occasion, and he has just
-reported on it to} {\em Glaucon (Socrates' conversation partner in the}
-Republic{\em ). He now reports} {\em again to an unnamed friend who has
-asked to hear about it all---and to us readers} {\em of Plato's
-dialogue.}
+Aristodemus, who was present on the occasion, and he has just
+reported on it to Glaucon (Socrates' conversation partner in the
+{\em Republic}). He now reports again to an unnamed friend who has
+asked to hear about it all---and to us readers of Plato's
+dialogue.
 
-{\em J.M.C.}\crlf
-\crlf
-\crlf
+\hfill John M.~Cooper\par
+\stopchapter
 
 {\bf {[}172{]}} APOLLODORUS: In fact, your question does not find me
 unprepared. Just the other day, as it happens, I was walking to the city
