--- a/projects/mc/rawcontent/rawsymposium.tex
+++ b/projects/mc/rawcontent/rawsymposium.tex
@@ -66,6 +66,8 @@ dialogue.
 \hfill John M.~Cooper\par
 \stopchapter
 
+\startchapter[title=Symposium]
+
 {\bf {[}172{]}} APOLLODORUS: In fact, your question does not find me
 unprepared. Just the other day, as it happens, I was walking to the city
 from my home in Phaleron when a man I know, who was making his way
@@ -165,13 +167,17 @@ And Aristodemus answered, “I'll do whatever you say.”
 
 “Come with me, then,” Socrates said, “and we shall prove the proverb
 wrong; the truth is, ‘Good men go uninvited to Goodman's
-feast.'\high{\goto{1}[symposium.htmlux5cux23symposfn_1]} Even Homer
+feast.'\endnote{Agathon's name could be
+translated “Goodman.” The proverb is, “Good men go uninvited to an
+inferior man's feast” (Eupolis fr. 289 Kock).} Even Homer
 himself, when you think about it, did not much like this proverb;
 {[}c{]} he not only disregarded it, he violated it. Agamemnon, of
 course, is one of his great warriors, while he describes Menelaus as a
 ‘limp spearman.' And yet, when Agamemnon offers a sacrifice and gives a
 feast, Homer has the weak Menelaus arrive uninvited at his superior's
-table.”\high{\goto{2}[symposium.htmlux5cux23symposfn_2]}
+table.”\endnote{Menelaus calls on Agamemnon
+at {\em Iliad} ii.408. Menelaus is called a limp spearman at
+xvii.587--88}
 
 Aristodemus replied to this, “Socrates, I am afraid Homer's description
 is bound to fit me better than yours. Mine is a case of an obvious
@@ -182,7 +188,8 @@ say I'm your guest.”
 
 “Let's go,” he said. “We'll think about what to say ‘as we proceed the
 two of us along the way.'
-”\high{\goto{3}[symposium.htmlux5cux23symposfn_3]}
+”\endnote{An allusion to {\em Iliad}
+x.224, “When two go together, one has an idea before the other.”}
 
 With these words, they set out. But as they were walking, Socrates began
 to think about something, lost himself in thought, and kept lagging
@@ -256,7 +263,8 @@ as witnesses.”
 
 “Now you've gone {\em too} far, Socrates,” Agathon replied. “Well, eat
 your dinner. Dionysus will soon enough be the judge of our claims to
-wisdom!”\high{\goto{4}[symposium.htmlux5cux23symposfn_4]}
+wisdom!”\endnote{Dionysus was the god of
+wine and drunkenness.}
 {\bf {[}176{]}}
 
 Socrates took his seat after that and had his meal, according to
@@ -364,16 +372,17 @@ Hesiod, the first to be born was Chaos,\crlf
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~{\em \ldots{} but then came}
 {\em Earth, broad-chested, a seat for all, forever safe,} {\em And
-Love.}\high{\goto{5}[symposium.htmlux5cux23symposfn_5]}\crlf
+Love.}\crlf
 \crlf
 
 And Acusilaus agrees with Hesiod: after Chaos came Earth and Love, these
-two.\high{\goto{6}[symposium.htmlux5cux23symposfn_6]} And Parmenides
+two.\endnote{Acusilaus was an
+early-fifth-century writer of genealogies} And Parmenides
 tells of this beginning:\crlf
 \crlf
 
 {\em The very first god {[}she{]} designed was
-Love.}\high{\goto{7}[symposium.htmlux5cux23symposfn_7]}\crlf
+Love.}\crlf
 \crlf
 
 All sides agree, then, that Love is one of the most ancient gods. As
@@ -397,7 +406,7 @@ only there were a way to start a city or an army made up of lovers and
 the boys they love! Theirs would be the best possible system of society,
 for they would {\bf {[}179{]}} hold back from all that is shameful, and
 seek honor in each other's
-eyes.\high{\goto{8}[symposium.htmlux5cux23symposfn_8]} Even a few of
+eyes. Even a few of
 them, in battle side by side, would conquer all the world, I'd say. For
 a man in love would never allow his loved one, of all people, to see him
 leaving ranks or dropping weapons. He'd rather die a thousand deaths!
@@ -406,12 +415,15 @@ danger---why, no one is so base that true Love could not inspire him
 with {[}b{]} courage, and make him as brave as if he'd been born a hero.
 When Homer says a god ‘breathes might' into some of the heroes, this is
 really Love's gift to every
-lover.\high{\goto{9}[symposium.htmlux5cux23symposfn_9]}
+lover.\endnote{Cf. {\em Iliad} x.482,
+xv.262; {\em Odyssey} ix.381.}
 
 Besides, no one will die for you but a lover, and a lover will do this
 even if she's a woman. Alcestis is proof to everyone in Greece that what
 {[}c{]} I say is
-true.\high{\goto{10}[symposium.htmlux5cux23symposfn_10]} Only she was
+true.\endnote{Alcestis was the
+self-sacrificing wife of Admetus, whom Apollo gave a chance to live if
+anyone would go to Hades in his place.} Only she was
 willing to die in place of her husband, although his father and mother
 were still alive. Because of her love, she went so far beyond his
 parents in family feeling that she made them look like outsiders, as if
@@ -428,7 +440,9 @@ herself, because they thought he was soft (he was, after all, a
 cithara-player) and did not dare to die like Alcestis for Love's sake,
 but contrived to enter living into Hades. So they punished him for that,
 and {[}e{]} made him die at the hands of
-women.\high{\goto{11}[symposium.htmlux5cux23symposfn_11]}
+women.\endnote{Orpheus was a musician of
+legendary powers, who charmed his way into the underworld in search of
+his dead wife, Eurydice.}
 
 The honor they gave to Achilles is another matter. They sent him to the
 Isles of the Blest because he dared to stand by his lover Patroclus and
@@ -439,7 +453,9 @@ Patroclus, and more than that, he did it for a man whose life was
 already over. The gods were highly delighted at this, of course, and
 gave him special honor, because he made so much of his lover. Aeschylus
 talks nonsense when he claims Achilles was the
-lover;\high{\goto{12}[symposium.htmlux5cux23symposfn_12]} he was more
+lover;\endnote{In his play, {\em The
+Myrmidons}. In Homer there is no hint of sexual attachment between
+Achilles and Patroclus.} he was more
 beautiful than Patroclus, more beautiful than all the heroes, and still
 beardless. Besides he was much younger, as Homer says.
 
@@ -555,7 +571,10 @@ philosophy, sport, and especially of Love is a lesson the tyrants of
 Athens learned directly from their own experience: Didn't their reign
 come to a dismal end because of the bonds uniting Harmodius and
 Aristogiton in love and
-affection?\high{\goto{13}[symposium.htmlux5cux23symposfn_13]} {[}d{]}
+affection?\endnote{Harmodius and Aristogiton
+attempted to overthrow the tyrant Hippias in 514 B.C. Although their
+attempt failed, the tyranny fell three years later, and the lovers were
+celebrated as tyrannicides.} {[}d{]}
 
 So you can see that plain condemnation of Love reveals lust for power in
 the rulers and cowardice in the ruled, while indiscriminate approval
@@ -613,7 +632,7 @@ you: it is the common, vulgar lover, who loves the body rather than the
 soul, the man whose love is bound to be inconstant, since what he loves
 is itself mutable and unstable. The moment the body is no longer in
 bloom, “he flies off and
-away,”\high{\goto{14}[symposium.htmlux5cux23symposfn_14]} his promises
+away,”\endnote{{\em Iliad} ii.71.} his promises
 and vows in tatters behind him. How different from this is a man who
 loves the right sort of character, and who remains its lover for
 {\bf {[}184{]}} life, attached as he is to something that is permanent.
@@ -755,7 +774,10 @@ too, is precisely the same. Indeed, this may have been just what
 Heraclitus had in mind, though his mode of expression certainly leaves
 much to be desired. The one, he says, “being at variance with itself is
 in agreement with itself” “like the attunement of a bow or a
-lyre.”\high{\goto{15}[symposium.htmlux5cux23symposfn_15]} Naturally, it
+lyre.”\endnote{Heraclitus of Ephesus, a
+philosopher of the early fifth century, was known for his enigmatic
+sayings. This one is quoted elsewhere in a slightly different form, frg.
+B 51 Diels-Kranz.} Naturally, it
 is patently absurd to claim that an attunement or a harmony is in itself
 discordant or that its elements are still in discord with one another.
 Heraclitus probably meant that an expert musician creates a harmony by
@@ -898,7 +920,8 @@ In strength and power, therefore, they were terrible, and they had great
 ambitions. They made an attempt on the gods, and Homer's story about
 Ephialtes and Otus was originally about them: how they tried to make an
 ascent to heaven so as to attack the
-gods.\high{\goto{16}[symposium.htmlux5cux23symposfn_16]} Then Zeus and
+gods.\endnote{{\em Iliad} v.385,
+{\em Odyssey} xi.305 ff.} Then Zeus and
 the other gods {[}c{]} met in council to discuss what to do, and they
 were sore perplexed. They couldn't wipe out the human race with
 thunderbolts and kill them all off, as they had the giants, because that
@@ -992,7 +1015,8 @@ of every lover {[}d{]} longs for something else; his soul cannot say
 what it is, but like an oracle it has a sense of what it wants, and like
 an oracle it hides behind a riddle. Suppose two lovers are lying
 together and
-Hephaestus\high{\goto{17}[symposium.htmlux5cux23symposfn_17]} stands
+Hephaestus\endnote{Cf. {\em Odyssey}
+viii.266 ff.} stands
 over them with his mending tools, asking, “What is it you human beings
 really want from each other?” And suppose they're perplexed, and he asks
 them again: “Is this your heart's desire, then---for the two of you to
@@ -2612,6 +2636,8 @@ Aristodemus followed him, as always. He said that Socrates went directly
 to the Lyceum, washed up, spent the rest of the day just as he always
 did, and only then, as evening was falling, went home to rest.\crlf
 \crlf
+
+\stopchapter
 
 \goto{1}[symposium.htmlux5cux23sympossup_1]. Agathon's name could be
 translated “Goodman.” The proverb is, “Good men go uninvited to an
