--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -13,5 +13,6 @@
         \input rawcontent/phaedrussay
 %        \input rawcontent/rawsymposium
     \stopbodymatter
+\dorecurse{2}{\page[yes]\null}
 \stoptext
 
