--- a/projects/mc/rawcontent/rawsymposium.tex
+++ b/projects/mc/rawcontent/rawsymposium.tex
@@ -9,7 +9,7 @@ Phaedrus (the passionate admirer of speeches and rhetoric in the
 dialogue named after him), who indignantly regrets the neglect by
 Greek poets and writers of the god of Love, the company agree to
 give speeches in turn, while they all drink, in praise of Love. ‘Love'
-(Greek} {\em erôs}) covers sexual attraction and gratification
+(Greek {\em erôs}) covers sexual attraction and gratification
 between men and women and between men and teenage boys, but the
 focus here is also and especially on the adult male's role as
 ethical and intellectual educator of the adolescent that was
@@ -68,7 +68,7 @@ dialogue.
 
 \startchapter[title=Symposium]
 
-{\bf {[}172{]}} APOLLODORUS: In fact, your question does not find me
+APOLLODORUS: In\inouter{172} fact, your question does not find me
 unprepared. Just the other day, as it happens, I was walking to the city
 from my home in Phaleron when a man I know, who was making his way
 behind me, saw me and called from a distance:
@@ -78,7 +78,7 @@ Apollodorus, wait!”
 
 So I stopped and waited.
 
-{[}b{]} “Apollodorus, I've been looking for you!” he said. “You know
+“Apollodorus\inouter{b}, I've been looking for you!” he said. “You know
 there once was a gathering at Agathon's when Socrates, Alcibiades, and
 their friends had dinner together; I wanted to ask you about the
 speeches they made on Love. What were they? I heard a version from a man
@@ -88,7 +88,7 @@ After all, Socrates is your friend---who has a better right than you to
 report his conversation? But before you begin,” he added, “tell me this:
 were you there yourself?”
 
-{[}c{]} “Your friend must have really garbled his story,” I replied, “if
+“Your\inouter{c} friend must have really garbled his story,” I replied, “if
 you think this affair was so recent that I could have been there.”
 
 “I did think that,” he said.
@@ -96,7 +96,7 @@ you think this affair was so recent that I could have been there.”
 “Glaucon, how could you? You know very well Agathon hasn't lived in
 Athens for many years, while it's been less than three that I've been
 Socrates' companion and made it my job to know exactly what he says
-{\bf {[}173{]}} and does each day. Before that, I simply drifted
+and\inouter{173} does each day. Before that, I simply drifted
 aimlessly. Of course, I used to think that what I was doing was
 important, but in fact I was the most worthless man on earth---as bad as
 you are this very moment: I used to think philosophy was the last thing
@@ -112,8 +112,8 @@ celebration.”
 “So it really was a long time ago,” he said. “Then who told you about
 it? Was it Socrates himself?”
 
-“Oh, for god's sake, of course not!” I replied. “It was the very same
-man {[}b{]} who told Phoenix, a fellow called Aristodemus, from
+“Oh\inouter{b}, for god's sake, of course not!” I replied. “It was the very same
+man who told Phoenix, a fellow called Aristodemus, from
 Cydatheneum, a real runt of a man, who always went barefoot. He went to
 the party because, I think, he was obsessed with Socrates---one of the
 worst cases at that time. Naturally, I checked part of his story with
@@ -122,14 +122,14 @@ Socrates, and Socrates agreed with his account.”
 “Please tell me, then,” he said. “You speak and I'll listen, as we walk
 to the city. This is the perfect opportunity.”
 
-So this is what we talked about on our way; and that's why, as I said
-{[}c{]} before, I'm not unprepared. Well, if I'm to tell {\em you} about
+So\inouter{c} this is what we talked about on our way; and that's why, as I said
+before, I'm not unprepared. Well, if I'm to tell {\em you} about
 it too---I'll be glad to. After all, my greatest pleasure comes from
 philosophical conversation, even if I'm only a listener, whether or not
 I think it will be to my advantage. All other talk, especially the talk
 of rich businessmen like you, bores me to tears, and I'm sorry for you
 and your friends because you think your affairs are important when
-really they're totally trivial. Perhaps, {[}d{]} in your turn, you think
+really\inouter{d} they're totally trivial. Perhaps, in your turn, you think
 I'm a failure, and, believe me, I think that what you think is true. But
 as for all of you, I don't just {\em think} you are failures---I know it
 for a fact.
@@ -141,16 +141,16 @@ you came to be called “the maniac,” but you certainly talk like one,
 always furious with everyone, including yourself---but not with
 Socrates!
 
-APOLLODORUS: Of course, my dear friend, it's perfectly obvious why I
-{[}e{]} have these views about us all: it's simply because I'm a maniac,
+APOLLODORUS: Of course, my dear friend\inouter{e}, it's perfectly obvious why I 
+have these views about us all: it's simply because I'm a maniac,
 and I'm raving!
 
 FRIEND: It's not worth arguing about this now, Apollodorus. Please do as
 I asked: tell me the speeches.
 
 APOLLODORUS: All right \ldots{} Well, the speeches went something like
-this---but I'd better tell you the whole story from the very beginning,
-as Aristodemus {\bf {[}174{]}} told it to me.
+this---but I'd better\inouter{174} tell you the whole story from the very beginning,
+as Aristodemus told it to me.
 
 He said, then, that one day he ran into Socrates, who had just bathed
 and put on his fancy sandals---both very unusual events. So he asked him
@@ -161,7 +161,7 @@ yesterday's victory party---I really don't like crowds---but I promised
 to be there today. So, naturally, I took great pains with my appearance:
 I'm going to the house of a good-looking man; I had to look my best. But
 let me ask you this,” he added, “I know you haven't been invited to the
-dinner; how would you like to come anyway?” {[}b{]}
+dinner; how would you like to come anyway?”\inouter{b}
 
 And Aristodemus answered, “I'll do whatever you say.”
 
@@ -171,7 +171,7 @@ feast.'\endnote{Agathon's name could be
 translated “Goodman.” The proverb is, “Good men go uninvited to an
 inferior man's feast” (Eupolis fr. 289 Kock).} Even Homer
 himself, when you think about it, did not much like this proverb;
-{[}c{]} he not only disregarded it, he violated it. Agamemnon, of
+he\inouter{c} not only disregarded it, he violated it. Agamemnon, of
 course, is one of his great warriors, while he describes Menelaus as a
 ‘limp spearman.' And yet, when Agamemnon offers a sacrifice and gives a
 feast, Homer has the weak Menelaus arrive uninvited at his superior's
@@ -183,7 +183,7 @@ Aristodemus replied to this, “Socrates, I am afraid Homer's description
 is bound to fit me better than yours. Mine is a case of an obvious
 inferior arriving uninvited at the table of a man of letters. I think
 you'd better figure out a good excuse for bringing me along, because,
-you know, I {[}d{]} won't admit I've come without an invitation. I'll
+you know, I \inouter{d} won't admit I've come without an invitation. I'll
 say I'm your guest.”
 
 “Let's go,” he said. “We'll think about what to say ‘as we proceed the
@@ -194,7 +194,7 @@ x.224, “When two go together, one has an idea before the other.”}
 With these words, they set out. But as they were walking, Socrates began
 to think about something, lost himself in thought, and kept lagging
 behind. Whenever Aristodemus stopped to wait for him, Socrates would
-urge him {[}e{]} to go on ahead. When he arrived at Agathon's he found
+urge him \inouter{e} to go on ahead. When he arrived at Agathon's he found
 the gate wide open, and that, Aristodemus said, caused him to find
 himself in a very embarrassing situation: a household slave saw him the
 moment he arrived and took him immediately to the dining room, where the
@@ -213,7 +213,7 @@ So I turned around (Aristodemus said), and Socrates was nowhere to be
 seen. And I said that it was actually Socrates who had brought {\em me}
 along as his guest.
 
-{\bf {[}175{]}} “I'm delighted he did,” Agathon replied. “But where is
+“I'm\inouter{175} delighted he did,” Agathon replied. “But where is
 he?”
 
 “He was directly behind me, but I have no idea where he is now.”
@@ -229,32 +229,32 @@ even though I called him several times.”
 “How strange,” Agathon replied. “Go back and bring him in. Don't leave
 him there.”
 
-But Aristodemus stopped him. “No, no,” he said. “Leave him alone. It's
-{[}b{]} one of his habits: every now and then he just goes off like that
+But Aristodemus stopped him.\inouter{b} “No, no,” he said. “Leave him alone. It's 
+one of his habits: every now and then he just goes off like that
 and stands motionless, wherever he happens to be. I'm sure he'll come in
 very soon, so don't disturb him; let him be.”
 
 “Well, all right, if you really think so,” Agathon said, and turned to
 the slaves: “Go ahead and serve the rest of us. What you serve is
 completely up to you; pretend nobody's supervising you---as if I ever
-did! Imagine that we are all your own guests, myself included. Give us
-good reason to {[}c{]} praise your service.”
+did! Imagine that we are all your\inouter{c} own guests, myself included. Give us
+good reason to praise your service.”
 
 So they went ahead and started eating, but there was still no sign of
 Socrates. Agathon wanted to send for him many times, but Aristodemus
 wouldn't let him. And, in fact, Socrates came in shortly afterward, as
 he always did---they were hardly halfway through their meal. Agathon,
 who, as it happened, was all alone on the farthest couch, immediately
-called: “Socrates, come lie down next to me. Who knows, if I touch you,
-I may {[}d{]} catch a bit of the wisdom that came to you under my
+called: “Socrates, come lie down next to me.\inouter{d} Who knows, if I touch you,
+I may catch a bit of the wisdom that came to you under my
 neighbor's porch. It's clear {\em you've} seen the light. If you hadn't,
 you'd still be standing there.”
 
 Socrates sat down next to him and said, “How wonderful it would be, dear
 Agathon, if the foolish were filled with wisdom simply by touching the
 wise. If only wisdom were like water, which always flows from a full cup
-into an empty one when we connect them with a piece of yarn---well,
-{[}e{]} then I would consider it the greatest prize to have the chance
+into an empty one when we connect\inouter{e} them with a piece of yarn---well, 
+then I would consider it the greatest prize to have the chance
 to lie down next to you. I would soon be overflowing with your wonderful
 wisdom. My own wisdom is of no account---a shadow in a dream---while
 yours is bright and radiant and has a splendid future. Why, young as you
@@ -262,10 +262,9 @@ are, you're so brilliant I could call more than thirty thousand Greeks
 as witnesses.”
 
 “Now you've gone {\em too} far, Socrates,” Agathon replied. “Well, eat
-your dinner. Dionysus will soon enough be the judge of our claims to
+your dinner. Dionysus will soon enough\inouter{176} be the judge of our claims to
 wisdom!”\endnote{Dionysus was the god of
 wine and drunkenness.}
-{\bf {[}176{]}}
 
 Socrates took his seat after that and had his meal, according to
 Aristodemus. When dinner was over, they poured a libation to the god,
@@ -276,7 +275,7 @@ the group:
 “Well, gentlemen, how can we arrange to drink less tonight? To be
 honest, I still have a terrible hangover from yesterday, and I could
 really use a break. I daresay most of you could, too, since you were
-also part of the celebration. So let's try not to overdo it.” {[}b{]}
+also part of the celebration. So let's try not to overdo it.”\inouter{b}
 
 Aristophanes replied: “Good idea, Pausanias. We've got to make a plan
 for going easy on the drink tonight. I was over my head last night
@@ -288,13 +287,13 @@ you strong enough for serious drinking?”
 
 “Absolutely not,” replied Agathon. “I've no strength left for anything.”
 
-{[}c{]} “What a lucky stroke for us,” Eryximachus said, “for me, for
+“What\inouter{c} a lucky stroke for us,” Eryximachus said, “for me, for
 Aristodemus, for Phaedrus, and the rest---that you large-capacity
 drinkers are already exhausted. Imagine how weak drinkers like ourselves
 feel after last night! Of course I don't include Socrates in my claims:
 he can drink or not, and will be satisfied whatever we do. But since
 none of us seems particularly eager to overindulge, perhaps it would not
-be amiss for me {[}d{]} to provide you with some accurate information as
+be amiss for me\inouter{d} to provide you with some accurate information as
 to the nature of intoxication. If I have learned anything from medicine,
 it is the following point: inebriation is harmful to everyone.
 Personally, therefore, I always refrain from heavy drinking; and I
@@ -305,7 +304,7 @@ effects of a previous night's excesses.”
 especially when you speak as a doctor. In this case, if the others know
 what's good for them, they too will do just as you say.”
 
-{[}e{]} At that point they all agreed not to get drunk that evening;
+\inouter{e}At that point they all agreed not to get drunk that evening;
 they decided to drink only as much as pleased them.
 
 “It's settled, then,” said Eryximachus. “We are resolved to force no one
@@ -313,7 +312,7 @@ to drink more than he wants. I would like now to make a further motion:
 let us dispense with the flute-girl who just made her entrance; let her
 play for herself or, if she prefers, for the women in the house. Let us
 instead spend our evening in conversation. If you are so minded, I would
-like to {\bf {[}177{]}} propose a subject.”
+like to propose a subject.”\inouter{177}
 
 They all said they were quite willing, and urged him to make his
 proposal. So Eryximachus said:
@@ -324,18 +323,18 @@ indignant on this issue, and often complains to me about it:
 
 “‘Eryximachus,' he says, ‘isn't it an awful thing! Our poets have
 composed hymns in honor of just about any god you can think of; but has
-a {[}b{]} single one of them given one moment's thought to the god of
+a single\inouter{b} one of them given one moment's thought to the god of
 love, ancient and powerful as he is? As for our fancy intellectuals,
 they have written volumes praising Heracles and other heroes (as did the
 distinguished Prodicus). Well, perhaps {\em that's} not surprising, but
-I've actually read a book {[}c{]} by an accomplished author who saw fit
+I've actually read a book by\inouter{c} an accomplished author who saw fit
 to extol the usefulness of salt! How {\em could} people pay attention to
 such trifles and never, not even once, write a proper hymn to Love? How
 could anyone ignore so great a god?'
 
 “Now, Phaedrus, in my judgment, is quite right. I would like, therefore,
 to take up a contribution, as it were, on his behalf, and gratify his
-wish. {[}d{]} Besides, I think this a splendid time for all of us here
+wish. Besides,\inouter{d} I think this a splendid time for all of us here
 to honor the god. If you agree, we can spend the whole evening in
 discussion, because I propose that each of us give as good a speech in
 praise of Love as he is capable of giving, in proper order from left to
@@ -343,7 +342,7 @@ right. And let us begin with Phaedrus, who is at the head of the table
 and is, in addition, the father of our subject.”
 
 “No one will vote against that, Eryximachus,” said Socrates. “How could
-{[}e{]} {\em I} vote ‘No,' when the only thing I say I understand is the
+{\em I} vote ‘No,'\inouter{e} when the only thing I say I understand is the
 art of love? Could Agathon and Pausanias? Could Aristophanes, who thinks
 of nothing but Dionysus and Aphrodite? No one I can see here now could
 vote against your proposal.
@@ -353,28 +352,37 @@ if the first speeches turn out to be good enough and to exhaust our
 subject, I promise we won't complain. So let Phaedrus begin, with the
 blessing of Fortune; let's hear his praise of Love.”
 
-They all agreed with Socrates, and pressed Phaedrus to start. Of course,
-{\bf {[}178{]}} Aristodemus couldn't remember exactly what everyone
+They all agreed\inouter{178} with Socrates, and pressed Phaedrus to start. Of course,
+Aristodemus couldn't remember exactly what everyone
 said, and I myself don't remember everything he told me. But I'll tell
 you what he remembered best, and what I consider the most important
 points.
 
 As I say, he said Phaedrus spoke first, beginning more or less like
-this:\crlf
-\crlf
-
+this:
+\blank[line]
 Love is a great god, wonderful in many ways to gods and men, and most
 marvelous of all is the way he came into being. We honor him as one of
-the most ancient gods, and the proof of his great age is this: the
-{[}b{]} parents of Love have no place in poetry or legend. According to
-Hesiod, the first to be born was Chaos,\crlf
-\crlf
+the most ancient gods,\inouter{b} and the proof of his great age is this: the 
+parents of Love have no place in poetry or legend. According to
+Hesiod, the first to be born was Chaos,
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~{\em \ldots{} but then came}
-{\em Earth, broad-chested, a seat for all, forever safe,} {\em And
-Love.}\crlf
-\crlf
+\startpoem
+{\em \ldots{} but then came
+Earth, broad-chested, a seat for all, forever safe, 
+And Love.}
+\stoppoem
+\framed[          autowidth=force,
+                  before=,
+                  after=,
+                  frame=on]
+{\em
+\startalignment[left]\ldots{} but then came\stopalignment
 
+\startalignment[center]Earth, broad-chested, a seat for all, forever safe,\stopalignment
+
+\startalignment[right]And Love.\stopalignment
+}
 And Acusilaus agrees with Hesiod: after Chaos came Earth and Love, these
 two.\endnote{Acusilaus was an
 early-fifth-century writer of genealogies} And Parmenides
